WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144778
REGRESSION (
r183300
): Fixed elements flash when scrolling
https://bugs.webkit.org/show_bug.cgi?id=144778
Summary
REGRESSION (r183300): Fixed elements flash when scrolling
Simon Fraser (smfr)
Reported
2015-05-07 18:15:00 PDT
REGRESSION (
r183300
): Fixed elements flash when scrolling
Attachments
Patch
(10.26 KB, patch)
2015-05-07 18:31 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-05-07 18:31:29 PDT
Created
attachment 252671
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-05-07 18:31:57 PDT
rdar://problem/20769741
Dean Jackson
Comment 3
2015-05-07 18:46:04 PDT
Comment on
attachment 252671
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252671&action=review
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:153 > - bool ancestorHasTransformAnimation; > - int treeDepth; > - CommitState() > - : ancestorHasTransformAnimation(false) > - , treeDepth(0) > - { } > + int treeDepth { 0 }; > + bool ancestorHasTransformAnimation { false }; > + bool ancestorsAllowBackingStoreDetachment { true };
Nice!
Simon Fraser (smfr)
Comment 4
2015-05-07 18:48:44 PDT
https://trac.webkit.org/r183970
Chris Dumez
Comment 5
2015-05-07 23:05:23 PDT
Follow-up build fix in <
http://trac.webkit.org/changeset/183980
> for: """ ERROR: WebCore has a weak external symbol in it (/Volumes/Data/EWS/WebKit/WebKitBuild/Release/WebCore.framework/Versions/A/WebCore) ERROR: A weak external symbol is generated when a symbol is defined in multiple compilation units and is also marked as being exported from the library. ERROR: A common cause of weak external symbols is when an inline function is listed in the linker export file. ERROR: symbol __ZNK7WebCore15GraphicsLayerCA28allowsBackingStoreDetachmentEv Command /bin/sh failed with exit code 1 """
Simon Fraser (smfr)
Comment 6
2015-05-07 23:42:16 PDT
Thanks for the build fix, Chris.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug