Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -1569,6 +1569,11 @@ void RenderLayerBacking::detachFromScrollingCoordinator(LayerScrollCoordinationR
     }
 }
 
+void RenderLayerBacking::setIsScrollCoordinatedWithViewportConstrainedRole(bool viewportCoordinated)
+{
+    m_graphicsLayer->setAllowsBackingStoreDetachment(!viewportCoordinated);
+}
+
 GraphicsLayerPaintingPhase RenderLayerBacking::paintingPhaseForPrimaryLayer() const
 {
     unsigned phase = 0;
